# GLoW_public

./: .gitattributes  .gitignore  Makefile  README.md  configure.py  freq_domain.py  freq_domain_c.py  glow_env.yml  lenses.py  mismatch.py  physical_units.py  pyproject.toml  setup.py  time_domain.py  time_domain_c.py  tools.py  update.sh  waveform.py
docs/: .buildinfo  api.html  gallery.html  genindex.html  index.html  notebooks.html  objects.inv  py-modindex.html  search.html  searchindex.js  usage.html
docs/_sources/: api.rst.txt  gallery.rst.txt  notebooks.rst.txt  usage.rst.txt
docs/freq_domain/: c_base.html  c_version.html  default.html  main.html  py_base.html  py_version.html
docs/lenses/: base.html  composite.html  default.html  main.html  offcenter.html  types.html
docs/time_domain/: c_base.html  main.html  (+4 more)
notebooks/: README  examples.ipynb  examples_C.ipynb  examples_old.ipynb  examples_phys_units.ipynb  examples_waveform.ipynb  validations_comparisons.ipynb
old_code/: diffinteg_cis.py  diffinteg_debug.ipynb  fourier.py  old_freq_domain_c.py  old_time_domain_c.py  physical_units.py  pip_installation_guide.md  requirements.txt  setup.py  wl_approx.py
scripts/: README
sensitivities/: lisa.txt
sphinx_doc/: include_notebooks.py  store_defaults.py
tests/: README  test_lenses.py  tmp_performance_tests.ipynb
wl_paper/: LISA_FF.py  halo_mass_function.ipynb  lenses_plots_paper.ipynb  lenses_plots_paper.py  mismatch_plots_paper.ipynb  mismatch_plots_paper.py  random_realizations.py  y_crit_computations.py
wrapper/: Makefile  __init__.py  setup.py
(+105 files in other folders)
